facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_bad_config_field.snap
---
source: facet-args/src/schema/tests.rs
expression: stripped
---
Error: config field must be a struct
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct BadConfigField {
   │        ───────┬──────  
   │               ╰──────── defined at facet-args/src/schema/tests.rs:129
   │ 
 4 │     config: String,
   │     ───────┬──────  
   │            ╰──────── config field must be a struct
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
